# WxMon

./: Makefile  README.md  config.py  requirements.txt  setup.cfg
docs/: roadmap.md  system.puml
src/dao/: __init__.py  mysql.py
src/hal/: __init__.py  bme280.py  pi.py
src/ui/: image_server.py  wxmon.py
src/utils/: __init__.py
test_integ/: test_mysql.py  test_pi.py  test_sensor_manager.py
tests/: test_creds.py  test_dao.py  test_hal.py  test_utils.py
