[metadata]
name = wxmon
version = 0.0.1
author = cB.
author_email = cbellingan@gmail.com
description = Yet another home weather monitor

[options]
package_dir = 
    =src
packages = find:
scripts =
    bin/cli.py

[options.entry_points]
console_scripts =
    executable-name = ui.wxmon:main
    executable-name = ui.image_server:main    